fix table collapsing

--- a/src/css/components/_table1.scss
+++ b/src/css/components/_table1.scss
@@ -29,12 +29,10 @@
 .ltr .tbl1 th.collapsing, .ltr .tbl1 td.collapsing{
 	width:1px;
 	white-space: nowrap;
-	padding-right: 2em;
 }
 .rtl .tbl1 th.collapsing, .rtl .tbl1 td.collapsing{
 	width:1px;
 	white-space: nowrap;
-	padding-left: 2em;
 }
 .rtl .tbl1 th {
 	text-align:right;
